updated main file

--- a/new.ipynb
+++ b/new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "60f83adc",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,6 @@
     "    fixed = sitk.RescaleIntensity(fixed, 0, 255)\n",
     "    moving = sitk.RescaleIntensity(moving, 0, 255)\n",
     "\n",
-    "    # RIGID (NO SHEARING)\n",
     "    initial_transform = sitk.CenteredTransformInitializer(\n",
     "        fixed,\n",
     "        moving,\n",
@@ -29,7 +28,7 @@
     "\n",
     "    # MULTIMODAL METRIC\n",
     "    registration.SetMetricAsMattesMutualInformation(50)\n",
-    "    registration.SetMetricSamplingStrategy(registration.NONE)  # 🔑 deterministic\n",
+    "    registration.SetMetricSamplingStrategy(registration.NONE)  # deterministic\n",
     "\n",
     "    registration.SetInterpolator(sitk.sitkLinear)\n",
     "\n",
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "91985b7c",
    "metadata": {},
    "outputs": [],
@@ -100,13 +99,11 @@
     "\n",
     "def display_results(fixed, moving, registered, alpha=0.5):\n",
     "\n",
-    "    # Convert to NumPy\n",
     "    mri_init = sitk.GetArrayFromImage(fixed)\n",
     "    ct_init  = sitk.GetArrayFromImage(moving)\n",
     "\n",
     "    reg = sitk.GetArrayFromImage(registered)\n",
     "\n",
-    "    # Normalize ONLY for overlay\n",
     "    f = (mri_init - mri_init.min()) / (mri_init.max() - mri_init.min())\n",
     "    r = (reg - reg.min()) / (reg.max() - reg.min())\n",
     "\n",
@@ -114,7 +111,7 @@
     "\n",
     "    plt.figure(figsize=(15,8))\n",
     "\n",
-    "    # ---------- ROW 1 : INITIAL IMAGES ----------\n",
+    "    # ---------- INITIAL IMAGES: ----------\n",
     "    plt.subplot(2,3,1)\n",
     "    plt.title(\"MRI Initial\")\n",
     "    plt.imshow(mri_init, cmap=\"gray\")\n",
@@ -126,9 +123,9 @@
     "    plt.axis(\"off\")\n",
     "\n",
     "    plt.subplot(2,3,3)\n",
-    "    plt.axis(\"off\")  # empty cell\n",
+    "    plt.axis(\"off\")\n",
     "\n",
-    "    # ---------- ROW 2 : REGISTERED RESULTS ----------\n",
+    "    # ---------- REGISTERED RESULTS ----------\n",
     "    plt.subplot(2,3,4)\n",
     "    plt.title(\"Fixed (MRI)\")\n",
     "    plt.imshow(f, cmap=\"gray\")\n",
